# backend/internal/delivery/handlers/mlPredict.go
@@ -26,6 +26,7 @@ func InitMlPredictHandler(mlPredictServ service.MlPredict) MlPredictHandler {
 // @Produce  json
 // @Param start_date query string true "Incident create"
 // @Success 200 {object} int "Successfully"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Failure 400 {object} map[string]string "Invalid input"
 // @Failure 500 {object} map[string]string "Internal server error"
 // @Router /ml_predict_write [post]
